adds robot dev quick ref and standards

--- a/docs/software/java/quick-ref.mdx
+++ b/docs/software/java/quick-ref.mdx
@@ -152,7 +152,7 @@ that can only take one of a predefined set of values.
     <td>
     ```java
     int x = 0;
-    // Assigns a value (right side) to a variable (left side) </td>
+    // Store the value 0 in variable x
     ```
     </td>
     <td > `int x = 0;` </td>
