--- a/docs/software/robot_dev/mechanisms.mdx
+++ b/docs/software/robot_dev/mechanisms.mdx
@@ -2,11 +2,16 @@
 title: Mechanisms
 description: Robot Mechanism library
 hide_table_of_contents: true
-sidebar_position: 3
+sidebar_position: 2
 ---
 
 :::note MARS/WARS Custom Implementation
 The mechanisms discussed on this page are part of our custom MWLib library developed specifically for MARS/WARS teams. They are not part of the official WPILib distribution but are designed to work seamlessly with it.
+:::
+
+:::warning Making a New Mechanism
+You likely won't need to create a new mechanism class unless you are implementing a unique mechanism that is not covered by the existing classes.
+If you are unsure, please consult with a mentor or team lead before proceeding. However you will need an understand of how the mechanisms work to use them effectively in your robot code.
 :::
 
 # Mechanisms
