--- a/docs/software/robot_dev/wpilib.mdx
+++ b/docs/software/robot_dev/wpilib.mdx
@@ -41,7 +41,7 @@ NetworkTables is a key component of WPILib that enables communication between th
 It is a publish-subscribe messaging system that allows for real-time data exchange. Data is published over a topic, and other devices can subscribe to that topic to receive updates.
 The full WPILib documentation for NetworkTables can be found [here](https://docs.wpilib.org/en/stable/docs/software/networktables/index.html). Many of the complexity behind NetworkTables
 is handled by other classes in WPILib, such as the Shuffleboard and SmartDashboard classes, which provide user-friendly interfaces for displaying and interacting with data.
-If you want to use those refer to our [Telemetry](./telemetry.mdx) page in this documentation.
+If you want to use those refer to our [Telemetry and Logging](./telemetry.mdx) page in this documentation.
 
 ---
 
