--- a/docs/software/training/computer-vision.mdx
+++ b/docs/software/training/computer-vision.mdx
@@ -13,11 +13,15 @@ In the context of FRC, computer vision is often used to help robots identify and
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT5JviDrAQzDRszoERR-5dwX_16MijoJpQVzg5lahy-vghUnZhSWAVGFyDAmUZmcG9T1XTwW7MDodLP/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 # Excercises
-- **N/A**
+- Sign Up for a [Roboflow](https://app.roboflow.com/login) Account
+- Get Added to the MARSWARS Robotics Program Workspace
+    - Share your account email with a mentor
+- Annotate 50 images for 2024 Notes
+
 
 # Related Documentation
 ## Hardware
-- [Nvidia Jetson Vision Computer](./hardware/jetsons.mdx)
+- [Nvidia Jetson Vision Computer](../hardware/jetsons.mdx)
 ## Vision
-- [Object Detection](./vision/obj_det.mdx)
-- [April Tags](.vision/apriltags.mdx)
+- [Object Detection](../vision/obj_det.mdx)
+- [April Tags](../vision/april_tags.mdx)
