--- a/docs/software/robot_dev/oi.mdx
+++ b/docs/software/robot_dev/oi.mdx
@@ -2,7 +2,7 @@
 title: Operator Interface
 description: Interfacing with controllers and buttons
 hide_table_of_contents: false
-sidebar_position: 4
+sidebar_position: 5
 ---
 
 # Operator Interface
@@ -15,7 +15,7 @@ If subsystems require direct access to controller inputs, consider passing the n
 ## Setting up a Controller
 To set up a controller, you will need to create an instance of the controller class and configure it to read input from the desired devices.
 This typically involves specifying the port or connection type for the controller.
-We typically use the `CommandXboxController` class for Xbox controllers, but other controller classes are available depending on the specific hardware. 
+We typically use the `CommandXboxController` class for Xbox controllers, but other controller classes are available depending on the specific hardware.
 This allows us to read inputs such as joystick positions, button presses, and trigger values. We can then bind a command directly to a button press or joystick movement.
 ```java
 CommandXboxController controller = new CommandXboxController(0);
@@ -63,24 +63,24 @@ if (povAngle == 0) {
 You can bind commands to button presses using the `onTrue()`, `whileTrue()`, and their counterparts for button releases.
 This allows you to execute specific commands when a button is pressed or held down.
 ```java
-controller.a().onTrue(new SomeCommand());
-controller.b().whileTrue(new AnotherCommand());
+controller.a().onTrue(ExampleCommands.SomeCommand());
+controller.b().whileTrue(ExampleCommands.AnotherCommand());
 ```
 
-Trigger axises can also be used to trigger commands when they exceed a certain threshold:
+Trigger axis can also be used to trigger commands when they exceed a certain threshold:
 ```java
 // Custom Threshold
-controller.rightTrigger(0.75).onTrue(new TriggeredCommand());
+controller.rightTrigger(0.75).onTrue(ExampleCommands.TriggeredCommand());
 // Default Threshold of 0.5
-controller.leftTrigger().whileTrue(new HeldCommand());
+controller.leftTrigger().whileTrue(ExampleCommands.HeldCommand());
 ```
 
 You can also bind commands to the POV pad directions:
 ```java
-controller.povUp().onTrue(new UpCommand());
-controller.povRight().onTrue(new RightCommand()); 
+controller.povUp().onTrue(ExampleCommands.UpCommand());
+controller.povRight().onTrue(ExampleCommands.RightCommand());
 ```
 
 We try to keep all of the bindings within the `configureBindings()` method of the `OI` class for better organization and maintainability.
 Other methods can exist for getting raw input values, but all command bindings should be centralized in `configureBindings()`.
-It not pretty, but you can see our 2025 bindings [here](https://github.com/FRC-Team-4143/mainbot-2025/blob/develop/src/main/java/frc/robot/OI.java)
+It not pretty, but you can see our 2025 bindings [here](https://github.com/FRC-Team-4143/mainbot-2025/blob/develop/src/main/java/frc/robot/OI.java).
