adds autos training page

--- a/docs/software/training/autonomous.mdx
+++ b/docs/software/training/autonomous.mdx
@@ -3,22 +3,33 @@ title: Autonomous
 description: An overview of autonomous programming in FRC robots. This includes strategies for designing autonomous routines, using sensors, and implementing autonomous behavior.
 hide_table_of_contents: true
 sidebar_position: 11
-unlisted: true
 ---
-
-# WIP
 
 # Autonomous
 Autonomous programming is a critical aspect of FRC robots, as it covers the first 15 seconds of the match where the robot operates without human intervention. During this period,
-the robot must perform a series of pre-programmed actions to score points, navigate the field, and interact with game pieces. Effective autonomous routines can provide a significant 
+the robot must perform a series of pre-programmed actions to score points, navigate the field, and interact with game pieces. Effective autonomous routines can provide a significant
 advantage in matches, as they allow the robot to maximize the points scored during this crucial phase where activity scores are higher.
 
-# Presentation 
-TBD
+# Presentation
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQORXMc-2loyPNWEt8aRnwd9bLQeTtZYi56Rw_X7IODoQQigHqBcz8TmfeWD5-faz6jFCOyp_qoPGPj/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 # Excercises
-- TBD
+- Create an Auto that does the following (Left Auto)
+   - Drive forward 5 meters (0 Heading)
+   - Turn 45 degrees
+   - Drive forward 2 meters (45 Heading)
+   - Shoot
+- Create an Auto that does the following (Right Auto)
+   - Drive forward 5 meters (0 Heading)
+   - Turn -45 degrees
+   - Drive forward 2 meters (-45 Heading)
+   - Shoot
+- Add both Autos to the Sendable Chooser
+
 
 # Related Documentation
-## Autonomous
-- TBD
+## Software Tools
+- [Choreo](../tools/choreo.mdx): Tool for creating and testing autonomous trajectories.
+- [Elastic](../tools/elastic.mdx): Tool for logging and visualizing robot data.
+## Software
+- [Autonomous](../robot_dev/autonomous.mdx): Overview of autonomous programming in FRC robots.
