--- a/docs/software/training/autonomous.mdx
+++ b/docs/software/training/autonomous.mdx
@@ -10,22 +10,37 @@ Autonomous programming is a critical aspect of FRC robots, as it covers the firs
 the robot must perform a series of pre-programmed actions to score points, navigate the field, and interact with game pieces. Effective autonomous routines can provide a significant
 advantage in matches, as they allow the robot to maximize the points scored during this crucial phase where activity scores are higher.
 
+---
+
 # Presentation
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQORXMc-2loyPNWEt8aRnwd9bLQeTtZYi56Rw_X7IODoQQigHqBcz8TmfeWD5-faz6jFCOyp_qoPGPj/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
+---
+
 # Excercises
-- Create an Auto that does the following (Left Auto)
-   - Drive forward 5 meters (0 Heading)
+## Accuracy and Precision
+- Create a way to turn to a specific heading
+- Create a way to drive ***straight*** a specific distance
+- Create dynamic commands for these actions
+   - driveDistance(double distance)
+   - turnToAngle(Rotation2d angle)
+## Command Sequences
+- Create an Auto that does the following: (Left Auto)
+   - Drive forward 5 meters (0 Heading) 
    - Turn 45 degrees
    - Drive forward 2 meters (45 Heading)
    - Shoot
-- Create an Auto that does the following (Right Auto)
+- Create an Auto that does the following: (Right Auto)
    - Drive forward 5 meters (0 Heading)
    - Turn -45 degrees
    - Drive forward 2 meters (-45 Heading)
    - Shoot
+## Auto Manager
 - Add both Autos to the Sendable Chooser
+- Test both Autos in Simulation
+   - Test on robot if everything looks correct
 
+---
 
 # Related Documentation
 ## Software Tools
@@ -33,3 +48,4 @@ advantage in matches, as they allow the robot to maximize the points scored duri
 - [Elastic](../tools/elastic.mdx): Tool for logging and visualizing robot data.
 ## Software
 - [Autonomous](../robot_dev/autonomous.mdx): Overview of autonomous programming in FRC robots.
+
